# bazel-android-workshop

./: .gitignore  README.md  WORKSPACE
app/: build.gradle
app/src/main/: AndroidManifest.xml  BUILD.bazel
app/src/main/java/com/example/myapplication/: BUILD.bazel  MainActivity.kt
app/src/main/java/com/example/myapplication/ui/dashboard/: BUILD.bazel  DashboardFragment.kt  DashboardViewModel.kt
app/src/main/java/com/example/myapplication/ui/home/: BUILD.bazel  HomeFragment.kt
app/src/main/java/com/example/myapplication/ui/notifications/: BUILD.bazel  NotificationsFragment.kt
app/src/main/manifest/: AndroidManifest.xml
app/src/main/res/navigation/: mobile_navigation.xml
gradle/wrapper/: gradle-wrapper.properties
